package com.company;

import com.company.personnages.Perso;

public interface Interact {
    void interact(Perso perso, Plateau plateau);
}