package com.company.plateau;
public class CaseVide extends Case {

    public CaseVide(){
        super("CaseVide");
    }

}
