@startuml

title __COMPANY's Class Diagram__\n

  namespace  {
    namespace om.company {
      abstract class com.company.Case {
          # name : String
          + Case()
          + Case()
          + getName()
          + interact()
          + setName()
          + toString()
      }
    }
  }
  

  namespace  {
    namespace om.company {
      class com.company.CaseVide {
          + CaseVide()
      }
    }
  }
  

  namespace  {
    namespace om.company {
      class com.company.Game {
          ~ sc : Scanner
          - plateauLength : int
          + chooseType()
          + createPerso()
          + displayPerso()
          + play()
          - chooseName()
          - controle()
          - decision()
          - giveDice()
          - instanciatePerso()
          - jouer_un_tour()
      }
    }
  }
  

  namespace  {
    namespace om.company {
      interface com.company.Interact {
          {abstract} + interact()
      }
    }
  }
  

  namespace  {
    namespace om.company {
      class com.company.Main {
          {static} + main()
      }
    }
  }
  

  namespace  {
    namespace om.company {
      class com.company.Menu {
          ~ sc : Scanner
          + chooseMenu()
          + display()
          + quit()
      }
    }
  }
  

  namespace  {
    namespace om.company {
      class com.company.PersonnageHorsPlateauException {
          + PersonnageHorsPlateauException()
      }
    }
  }
  

  namespace  {
    namespace om.company {
      class com.company.Plateau {
          ~ plateau : ArrayList<Case>
          - plateauLength : int
          + Plateau()
          + getCase()
          + getPlateauLength()
          + mix()
          + setCase()
      }
    }
  }
  

  com.company.Case .up.|> com.company.Interact
  com.company.CaseVide -up-|> com.company.Case
  com.company.Game o-- com.company.Plateau : plateau
  com.company.Plateau -up-|> com.company.Case


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
